ADD: removed dummy and added the actual working data
